--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
       >
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n1.jpg"
+            src="n1.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -596,7 +596,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n2.jpg"
+            src="n2.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -616,7 +616,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n3.jpg"
+            src="n3.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -636,7 +636,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n4.jpg"
+            src="n4.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -662,7 +662,7 @@
       >
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/f8.jpg"
+            src="f8.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -682,7 +682,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/f7.jpg"
+            src="f7.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -702,7 +702,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n7.jpg"
+            src="n7.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -722,7 +722,7 @@
         </div>
         <div class="card front-card mx-3" style="width: 18rem">
           <img
-            src="img/products/n5.jpg"
+            src="n5.jpg"
             class="card-img-top img-fluid"
             alt="..."
           />
@@ -793,7 +793,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
             <img
-              src="img/banner/b4.jpg"
+              src="b4.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -809,7 +809,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="3000">
             <img
-              src="img/banner/b17.jpg"
+              src="b17.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -827,7 +827,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="3000">
             <img
-              src="img/banner/b16.jpg"
+              src="b16.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -843,7 +843,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="3000">
             <img
-              src="img/banner/b10.jpg"
+              src="b10.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -859,7 +859,7 @@
           </div>
           <div class="carousel-item" data-bs-interval="3000">
             <img
-              src="img/banner/b18.jpg"
+              src="b18.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -875,7 +875,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="img/banner/b7.jpg"
+              src="b7.jpg"
               class="d-block certi-img gallery-img"
               alt="..."
             />
@@ -981,7 +981,7 @@
     <div class="container overflow-hidden end-container" style="margin-top: 10rem;">
       <div class="row gx-5 gutter" style="cursor: pointer;">
         <div class="col col-margin">
-          <img src="img/banner/b4.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
+          <img src="b4.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
           height: 90%;" alt="..." />
 
           <div class="card template-body" style="width: 25rem; background-color: transparent;">
@@ -992,7 +992,7 @@
           </div>
         </div>
         <div class="col col-margin">
-          <img src="img/banner/b7.jpg" class="card-img-top img-fluid" style="    width: 100%; opacity: 0.7;
+          <img src="b7.jpg" class="card-img-top img-fluid" style="    width: 100%; opacity: 0.7;
           height: 90%;" alt="..." />
 
           <div class="card  template-body" style="width: 25rem; background-color: transparent">
@@ -1008,7 +1008,7 @@
     <div class="container overflow-hidden mg-top" style="margin-top: 3rem;">
       <div class="row gx-5" style="cursor: pointer;">
         <div class="col col-margin">
-          <img src="img/banner/b10.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
+          <img src="b10.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
           height: 90%;" alt="..." />
 
           <div class="card template-body" style="width: 25rem; background-color: transparent">
@@ -1020,7 +1020,7 @@
         </div>
 
         <div class="col col-margin">
-          <img src="img/banner/b16.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
+          <img src="b16.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
           height: 90%;" alt="..." />
 
           <div class="card template-body" style="width: 25rem; background-color: transparent">
@@ -1032,7 +1032,7 @@
         </div>
 
         <div class="col col-app col-margin">
-          <img src="img/banner/b17.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
+          <img src="b17.jpg" class="card-img-top img-fluid" style="width: 100%; opacity: 0.7;
           height: 90%;" alt="..." />
 
           <div class="card template-body" style="width: 25rem; background-color: var(--secondary-color)">
